--- a/styles/dynosaur.css
+++ b/styles/dynosaur.css
@@ -1,6 +1,57 @@
 body {
 	background: #1b1b23;
 }
+
+.app-content {
+	background: inherit;
+}
+
+/* General Utils */
+.bg {
+	position: absolute;
+	z-index: -1;
+}
+
+#login-page {
+	background-image: url(../images/login-bg.png);
+	background-size: 100% 100%;
+	text-align: center;
+}
+	#login-page .logo {
+		display: inline-block;
+		margin: 100px auto 30px;
+	}
+#login-form {
+	width: 400px;
+	margin: 0 auto;
+}
+	#login-form .first {
+		border-radius: 15px 15px 0 0;
+		margin: 0 0 1px 0;
+	}
+	#login-form .last {
+		border-radius: 0 0 15px 15px;
+		margin: 0 0 10px 0;
+	}
+	#login-form input:focus {
+		transition: opacity 0.3s;
+		color: #121212;
+		opacity: 1;
+	}
+	#login-form input {
+		background: #ffffff;
+		opacity: 0.5;
+		text-indent: 10px;
+		border: none;
+		outline: none;
+	}
+	#login-form .app-button {
+		border-radius: 15px;
+		height: 40px;
+		background: #7976b4;
+		color: #ffffff;
+	}
+
 .app.app-button {
 	height: auto;
 	text-align: left;
