--- a/styles/dynosaur.css
+++ b/styles/dynosaur.css
@@ -56,13 +56,36 @@ body {
 			color: #ffffff;
 		}
 
-
-.app.app-button {
-	height: auto;
-	text-align: left;
-	background: #fff;
-	margin-bottom: 10px;
+#home-page {
+	background: #1b1b24;
 }
-.app-section {
+#apps-list {
 	background: inherit;
+	margin: 0;
 }
+	#apps-list .app:active {
+		color: red;
+	}
+	#apps-list .app {
+		height: auto;
+		text-align: left;
+		font-weight: normal;
+		line-height: 1em;
+		border: none;
+		border-left: 4px solid #00afed;
+		padding: 20px 10px;
+		background: #3b394b;
+		color: #ffffff;
+		margin-bottom: 1px;
+	}
+		#apps-list .app h3 {
+			font-weight: normal;
+			margin: 5px auto;
+		}
+		#apps-list .app p {
+			font-size: 0.9em;
+			color: #9b9898;
+		}
+		#apps-list .app {
+
+		}
