--- a/styles/dynosaur.css
+++ b/styles/dynosaur.css
@@ -49,12 +49,49 @@ body {
 			border: none;
 			outline: none;
 		}
-		#login-form .app-button {
+		#security-code {
+			margin: 10px 0;
+		}
+			#login-security {
+				border-radius: 15px;
+				width: 85%;
+				display: inline-block;
+			}
+			#security-code-instructions {
+				display: inline-block;
+				width: 20px; height: 20px;
+				background-size: cover;
+				background-repeat: no-repeat;
+				background-position: center;
+				background-image: url(../images/info.png);
+				vertical-align: middle;
+				margin: 12px;
+			}
+				#security-code-instructions:active {
+					opacity: 0.5;
+				}
+		#login-page .app-button.active {
+			background-color: transparent;
+		}
+		#login-button {
 			border-radius: 15px;
 			height: 40px;
 			background: #7976b4;
 			color: #ffffff;
 		}
+		#login-form.error input:focus {
+			color: #ff0000;
+		}
+		#login-form.error input {
+			color: #ff0000;
+		}
+
+#instructions-page {
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center;
+	background-image: url(../images/instructions.png);
+}
 
 #home-page {
 	background: #1b1b24;
@@ -122,9 +159,16 @@ body {
 			-webkit-box-shadow: inset 1px 1px 10px rgba(0,0,0,0.30);
 			-moz-box-shadow: inset 1px 1px 10px rgba(0,0,0,0.30);
 			box-shadow: inset 1px 1px 10px rgba(0,0,0,0.30);
-			background: #232139;
+			// background: #232139;
 			margin-left: 8px;
+			background-size: 80% 80%;
+			background-repeat: no-repeat;
+			background-position: center;
 		}
+			#apps-list .app-thumbnail.dyno1 { background-image: url(../images/dyno1.png); }
+			#apps-list .app-thumbnail.dyno2 { background-image: url(../images/dyno2.png); }
+			#apps-list .app-thumbnail.dyno3 { background-image: url(../images/dyno3.png); }
+			#apps-list .app-thumbnail.dyno4 { background-image: url(../images/dyno4.png); }
 		#apps-list .app-details {
 			display: inline-block;
 			margin: 8px 0 10px 15px;
@@ -166,6 +210,8 @@ body {
 		background-image: -webkit-radial-gradient(center center, cover, #353442, # #2C2C35);
 		background-image: -moz-radial-gradient(center center, cover, #353442, # #2C2C35);
 		background-image: radial-gradient(center center, cover, #353442, # #2C2C35);
+		background: url(../images/egg.png);
+		background-size: cover;
 	}
 	#app-page .app-box {
 		border-bottom: 1px solid #3f3f49;
@@ -204,7 +250,87 @@ body {
 		color: #121212;
 		opacity: 1;
 	}
+	#app-page .app-space {
+		height: 400px;
+		display: block;
+	}
 
+#create-page {
+	-webkit-box-shadow: inset 0 0 10px rgba(0,0,0,0.4);
+	-moz-box-shadow: inset 0 0 10px rgba(0,0,0,0.4);
+	box-shadow: inset 0 0 10px rgba(0,0,0,0.4);
+	background-image: -webkit-gradient(radial, center center, 0, center center, 212, from(#353442), to(#2C2C35));
+	background-image: -webkit-radial-gradient(center center, cover, #353442, # #2C2C35);
+	background-image: -moz-radial-gradient(center center, cover, #353442, # #2C2C35);
+	background-image: radial-gradient(center center, cover, #353442, # #2C2C35);
+}
+	@-webkit-keyframes pulse {
+		0% { color: rgba(255, 255, 255, 0.25) }
+		10% { color: rgba(255, 255, 255, 0.30) }
+		20% { color: rgba(255, 255, 255, 0.50) }
+		30% { color: rgba(255, 255, 255, 0.75) }
+		40% { color: rgba(255, 255, 255, 0.40) }
+		50% { color: rgba(255, 255, 255, 0.25) }
+		60% { color: rgba(255, 255, 255, 0.40) }
+		70% { color: rgba(255, 255, 255, 0.75) }
+		80% { color: rgba(255, 255, 255, 0.50) }
+		90% { color: rgba(255, 255, 255, 0.30) }
+		100% { color: rgba(255, 255, 255, 0.25) }
+	}
+	#create-page .app-loading-text {
+		text-align: center;
+		font-size: 1em;
+		color: rgba(255, 255, 255, 0.75);
+		-webkit-animation: pulse 6s ease-in-out infinite;
+		position: absolute;
+		bottom: 80px;
+		text-align: center;
+		width: 100%;
+	}
+	#create-page .dyno {
+		position: absolute;
+		display: block;
+		width: 100px;
+		height: 100px;
+		background: url(../images/dyno-right.png);
+		margin-left: -50px;
+		margin-right: -50px;
+		top: 50%;
+		left: 50%;
+		background-size: cover;
+	}
+	#create-page .app-section {
+		background: transparent;
+	}
+	#create-page .checkmark {
+		position: absolute;
+		display: block;
+		width: 256px;
+		height: 256px;
+		background: url(../images/check.png);
+		margin-left: -128px;
+		margin-top: -128px;
+		top: 40%;
+		left: 50%;
+		background-size: cover;
+	}
+	#create-page .app-link {
+		position: absolute;
+		text-decoration: none;
+		bottom: 30px;
+		width: 100%;
+	}
+		#create-page .app-link .app-button {
+			border-radius: 15px;
+			width: 90%;
+			height: 40px;
+			background: #7976b4;
+			color: #ffffff;
+		}
+
+.app-section {
+	border: none;
+}
 .app-topbar .app-button.active {
 	background: transparent;
 	color: #00afed;
